# docs/swagger.json
@@ -253,11 +253,8 @@
         "controllers.GeneratePlanRequest": {
             "type": "object",
             "properties": {
-                "bodyparts": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
+                "bodypart": {
+                    "type": "string"
                 }
             }
         },
